tokens update and alignment corrections

--- a/packages/styles/src/components/list-check.scss
+++ b/packages/styles/src/components/list-check.scss
@@ -1,7 +1,7 @@
 @use '../functions/tokens';
 @use '../mixins/icons' as icon-mixin;
-@use '../functions/icons';
 @use '../tokens/components';
+@use '../mixins/media';
 
 tokens.$default-map: components.$post-listcheck;
 
@@ -11,22 +11,29 @@ tokens.$default-map: components.$post-listcheck;
   align-items: flex-start;
   padding-block-start: tokens.get('list-check-margin-block');
   padding-block-end: tokens.get('list-check-margin-block');
-  gap: tokens.get('list-check-item-gap-block-text');
   list-style: none;
+  padding-inline-start: calc(
+    #{tokens.get('list-check-sizing-icon')} + 2 * #{tokens.get('list-check-padding-icon')} + #{tokens.get(
+        'list-check-icon-gap-inline'
+      )} + 2 * #{tokens.get('list-check-icon-container-inline')}
+  );
+  gap: tokens.get('list-check-item-gap-block-text');
 
   > li {
     position: relative;
     color: tokens.get('list-check-color-text-fg');
     padding-block-start: tokens.get('list-check-text-padding');
     padding-block-end: tokens.get('list-check-text-padding');
-
     &::before {
       display: block;
       position: absolute;
       top: 0;
       left: 0;
       margin-inline-start: calc(
-        -1 * (#{tokens.get('list-check-sizing-icon')} + #{tokens.get('list-check-icon-gap-inline')})
+        -1 * (#{tokens.get('list-check-sizing-icon')} + 2 * #{tokens.get('list-check-padding-icon')} +
+              #{tokens.get('list-check-icon-gap-inline')} + #{tokens.get(
+                'list-check-icon-container-inline'
+              )})
       );
       margin-block-start: calc(-1 * tokens.get('list-check-text-padding'));
       margin-block-end: calc(-1 * tokens.get('list-check-text-padding'));
@@ -39,13 +46,22 @@ tokens.$default-map: components.$post-listcheck;
       );
       content: '';
       border-radius: 50%;
+      @include media.max(sm) {
+        margin-block-start: tokens.get('list-check-icon-container-block');
+        margin-block-end: tokens.get('list-check-icon-container-block');
+        padding-inline-start: tokens.get('list-check-icon-container-inline');
+        padding-inline-end: tokens.get('list-check-icon-container-inline');
+      }
     }
 
     &::after {
       display: block;
       position: absolute;
       margin-inline-start: calc(
-        -1 * (#{tokens.get('list-check-sizing-icon')} + #{tokens.get('list-check-icon-gap-inline')})
+        -1 * (#{tokens.get('list-check-sizing-icon')} + 2 * #{tokens.get('list-check-padding-icon')} +
+              #{tokens.get('list-check-icon-gap-inline')} + #{tokens.get(
+                'list-check-icon-container-inline'
+              )})
       );
       margin-block-start: calc(-1 * tokens.get('list-check-text-padding'));
       margin-block-end: calc(-1 * tokens.get('list-check-text-padding'));
@@ -56,6 +72,12 @@ tokens.$default-map: components.$post-listcheck;
       content: '';
       @include icon-mixin.icon('3035');
       color: tokens.get('list-check-color-icon-fg');
+      @include media.max(sm) {
+        margin-block-start: tokens.get('list-check-icon-container-block');
+        margin-block-end: tokens.get('list-check-icon-container-block');
+        padding-inline-start: tokens.get('list-check-icon-container-inline');
+        padding-inline-end: tokens.get('list-check-icon-container-inline');
+      }
     }
   }
 }
